added the nav to all pages and made the login page look a tiny bit better

--- a/admin/admin-login.html
+++ b/admin/admin-login.html
@@ -6,10 +6,19 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
+<header>
 
 <h1>Ansatt-innlogging</h1>
-
-<form action="admin.html">
+<nav>
+    <a href="../index.html">Hjem</a>
+    <a href="../menu.html">Meny</a>
+    <a href="../contact.html">Kontakt</a>
+    <a href="../booking.html">Bestill bord</a>
+    <a class="login-btn" href="admin-login.html">Ansatt Login</a>
+</nav>
+</header>
+<br>
+<form class="login-form" action="admin.html">
     <label>Brukernavn:</label>
     <input type="text" required>
 
