--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <a href="menu.html">Meny</a>
         <a href="contact.html">Kontakt</a>
         <a href="booking.html">Bestill bord</a>
+        <a class="login-btn" href="admin/admin-login.html">Ansatt Login</a>
     </nav>
 </header>
 
