--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,13 @@
 
 <header>
     <h1>Kontakt oss</h1>
-    <a href="index.html">Tilbake</a>
+    <nav>
+        <a href="index.html">Hjem</a>
+        <a href="menu.html">Meny</a>
+        <a href="contact.html">Kontakt</a>
+        <a href="booking.html">Bestill bord</a>
+        <a class="login-btn" href="admin/admin-login.html">Ansatt Login</a>
+    </nav>
 </header>
 
 <main>
