--- a/admin/admin.html
+++ b/admin/admin.html
@@ -23,7 +23,7 @@
             background: white;
             padding: 15px;
             border-radius: 10px;
-            box-shadow: 0px 0px 6px rgba(0,0,0,0.1);
+            box-shadow: 0 0 6px rgba(0,0,0,0.1);
             height: fit-content;
         }
 
@@ -34,14 +34,14 @@
         }
 
         .profileBox img {
-            width: 120px;
+            width: 40%;
             border-radius: 10px;
         }
 
         .logoutBtn {
             margin-top: 15px;
             display: block;
-            width: 100%;
+            width: 1fr%;
             padding: 10px;
             background: #cc0000;
             color: white;
@@ -59,39 +59,28 @@
         }
 
         table {
-            background: white;
             width: 100%;
+            background: white;
             border-collapse: collapse;
             border-radius: 10px;
             overflow: hidden;
             margin-bottom: 30px;
         }
 
-        th, td {
+        th,
+        td {
             padding: 10px;
             border-bottom: 1px solid #ddd;
             text-align: left;
-        }
-
-        .ok {
-            color: green;
-            font-weight: bold;
-        }
-
-        .conflict {
-            color: red;
-            font-weight: bold;
         }
     </style>
 </head>
 <body>
 
-<!-- VENSTRE -->
 <div class="mainContent">
     <h1>Admin Dashboard</h1>
 </div>
 
-<!-- HØYRE PROFIL -->
 <div class="profileBox">
     <div class="profileContent">
         <div>
@@ -106,10 +95,9 @@
     <a class="logoutBtn" href="admin-login.html">Logg ut</a>
 </div>
 
-<!-- TABELLER -->
 <div class="tablesSection">
-
     <h2>Allerede godkjente bestillinger</h2>
+
     <table>
         <tr>
             <th>Navn</th>
@@ -136,7 +124,6 @@
             <td>6</td>
         </tr>
     </table>
-
 </div>
 
 </body>
