--- a/index.html
+++ b/index.html
@@ -2,27 +2,35 @@
 <html lang="no">
 <head>
     <meta charset="UTF-8">
-    <title>Tangen Torv – Hjem</title>
+    <title>Tangen Torv</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
 <header>
-    <h1>Tangen Torv</h1>
-
     <nav>
-        <a href="index.html">Hjem</a>
-        <a href="menu.html">Meny</a>
-        <a href="contact.html">Kontakt</a>
-        <a href="booking.html">Bestill bord</a>
-        <a class="login-btn" href="admin/admin-login.html">Ansatt Login</a>
+        <a href="menu.html">MENU</a>
+        <a href="booking.html">RESERVATION</a>
     </nav>
 </header>
 
-<main>
-    <h2>Velkommen til Tangen Torv</h2>
-    <p>God mat, god stemning — midt på Tangen.</p>
-</main>
+<div class="hero">
+    <div class="hero-content">
+        <h2>TANGEN TORV</h2>
+        <p>Modern food · Local flavours</p>
+        <div class="hero-buttons">
+            <a href="menu.html" class="btn btn-outline">VIEW MENU</a>
+            <a href="booking.html" class="btn btn-gold">BOOK TABLE</a>
+        </div>
+    </div>
+</div>
+
+<footer>
+    <p>kontakt@tangentorv.no · 38 00 00 00 </p>
+    <p>Tangenvn 12, Kristiansand</p>
+    <br>
+    <p><a href="admin/admin-login.html">Staff login</a></p>
+</footer>
 
 </body>
 </html>
