--- a/menu.html
+++ b/menu.html
@@ -2,41 +2,52 @@
 <html lang="no">
 <head>
     <meta charset="UTF-8">
-    <title>Meny – Tangen Torv</title>
+    <title>Menu – Tangen Torv</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
 <header>
-    <h1>Meny</h1>
-        <nav>
-        <a href="index.html">Hjem</a>
-        <a href="menu.html">Meny</a>
-        <a href="contact.html">Kontakt</a>
-        <a href="booking.html">Bestill bord</a>
-        <a class="login-btn" href="admin/admin-login.html">Ansatt Login</a>
+    <nav>
+        <a href="index.html">HOME</a>
+        <a href="booking.html">RESERVATION</a>
     </nav>
 </header>
 
-<main>
-    <h2>Forretter</h2>
-    <ul>
-        <li>Bruschetta – 89 kr</li>
-        <li>Tomatsuppe – 99 kr</li>
-    </ul>
+<div class="page">
+    <div class="page-content">
+        <div class="menu-card">
+            <h2>Starters</h2>
+            <ul>
+                <li><span>Bruschetta</span><span>89 kr</span></li>
+                <li><span>Tomato soup</span><span>99 kr</span></li>
+            </ul>
+        </div>
 
-    <h2>Hovedretter</h2>
-    <ul>
-        <li>Pasta Alfredo – 159 kr</li>
-        <li>Biff med pommes – 249 kr</li>
-    </ul>
+        <div class="menu-card">
+            <h2>Main courses</h2>
+            <ul>
+                <li><span>Pasta Alfredo</span><span>159 kr</span></li>
+                <li><span>Grilled steak</span><span>249 kr</span></li>
+            </ul>
+        </div>
 
-    <h2>Desserter</h2>
-    <ul>
-        <li>Panna cotta – 89 kr</li>
-        <li>Sjokoladekake – 79 kr</li>
-    </ul>
-</main>
+        <div class="menu-card">
+            <h2>Desserts</h2>
+            <ul>
+                <li><span>Panna cotta</span><span>89 kr</span></li>
+                <li><span>Chocolate cake</span><span>79 kr</span></li>
+            </ul>
+        </div>
+    </div>
+</div>
+
+<footer>
+    <p>kontakt@tangentorv.no · 38 00 00 00 </p>
+    <p>Tangenvn 12, Kristiansand</p>
+    <br>
+    <p><a href="admin/admin-login.html">Staff login</a></p>
+</footer>
 
 </body>
 </html>
